# 3D-Platformer

./: .gitignore  3Dattempt2.sln  3Dattempt2.vcxproj  3Dattempt2.vcxproj.filters  CMakeLists.txt  Camera.cpp  Camera.h  Main.cpp  README.md  TODO.txt  Texture.cpp  Texture.h  VBO.h  asan_suppressions.txt  default.frag  default.vert  glad.c
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
include/: Camera.h  EBO.h  FontTexture.h  Gui.h  ImageTexture.h  LightController.h  Log.h  Mass.h  Mesh.h  RectangularPrism.h  Shader.h  Shape3D.h  Sphere.h  Texture.h  Utils.h  VAO.h  VBO.h
shader/: default.frag  default.vert  font.frag  gui.frag  gui.vert  light.frag
src/: Camera.cpp  Camera.h  EBO.cpp  FontTexture.cpp  Gui.cpp  ImageTexture.cpp  LightController.cpp  Main.cpp  Mass.cpp  Mass.h  Mesh.cpp  RectangularPrism.cpp  Shader.cpp  Shape3D.cpp  Sphere.cpp  Texture.cpp  VAO.cpp  VBO.cpp  shaderClass.cpp
src/controller/: LightController.h
src/gui/: Gui.cpp  Gui.h
src/mesh/: EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  VAO.cpp  VAO.h
src/shader/: Shader.cpp
src/shape/: DebugPyramid.h  RectangularPrism.cpp  RectangularPrism.h  Shape3D.cpp  Shape3D.h
src/texture/: FontTexture.cpp  FontTexture.h  ImageTexture.cpp  ImageTexture.h  Texture.cpp  Texture.h
src/util/: Log.cpp
